fixed projects button on small screen, imported italy_api project

--- a/css/style.scss
+++ b/css/style.scss
@@ -808,6 +808,7 @@ html.transition *:after {
                     color :  var(--bg-panel);
                     border-radius: 5px;
                     max-height: 40px;
+                    margin: 0 20px ; 
                 }
             }
 
